--- a/src/GGL.Web.App/src/app/app.component.html
+++ b/src/GGL.Web.App/src/app/app.component.html
@@ -7,61 +7,7 @@
                 <router-outlet></router-outlet>
             </div>
             <!-- end:header-top -->
-            <div id="mycarousel" class="carousel slide" data-ride="carousel">
-                <!-- Indicators -->
-                <ol class="carousel-indicators">
-                    <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
-                    <li data-target="#mycarousel" data-slide-to="1"></li>
-                    <li data-target="#mycarousel" data-slide-to="2"></li>
-                    <li data-target="#mycarousel" data-slide-to="3"></li>
-                    <li data-target="#mycarousel" data-slide-to="4"></li>
-                </ol>
-
-                <!-- Wrapper for slides -->
-                <div class="carousel-inner" role="listbox">
-                    <div class="item">
-                        <img src="../assets/images/sliders/banner-1.jpg" alt="Banner 1">
-                        <!--<div class="carousel-caption">
-                            <h3>First Image</h3>
-                        </div>-->
-                    </div>
-                    <div class="item">
-                        <img src="../assets/images/sliders/catering-1.jpg" alt="Catering Banner 1">
-                        <!--<div class="carousel-caption">
-                            <h3>Second Image</h3>
-                        </div>-->
-                    </div>
-                    <div class="item">
-                        <img src="../assets/images/sliders/banner-3.jpg" alt="Banner 3">
-                        <!--<div class="carousel-caption">
-                            <h3>Third Image</h3>
-                        </div>-->
-                    </div>
-                    <div class="item">
-                        <img src="../assets/images/sliders/banner-4.jpg" alt="Banner 4">
-                        <!--<div class="carousel-caption">
-                            <h3>Fourth Image</h3>
-                        </div>-->
-                    </div>
-                    <div class="item">
-                        <img src="../assets/images/sliders/catering-4.jpg" alt="Catering Banner 4">
-                        <!--<div class="carousel-caption">
-                            <h3>Fifth Image</h3>
-                        </div>-->
-                    </div>
-                </div>
-
-                <!-- Controls -->
-                <a class="left carousel-control" href="#mycarousel" role="button" data-slide="prev">
-                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="right carousel-control" href="#mycarousel" role="button" data-slide="next">
-                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
-            </div>
-
+            <ggl-carousal></ggl-carousal>
             <div id="ggl-couple" class="ggl-section-gray">
                 <div class="container">
                     <div class="row row-bottom-padded-md animate-box">
@@ -110,21 +56,7 @@
                     </div>
                 </div>
             </div>
-            <ggl-countdown-timer (hide)="hideTimer"></ggl-countdown-timer>
-            <!-- <div id="ggl-countdown">
-                <div class="row">
-                    <div class="col-md-8 col-md-offset-2 text-center animate-box">
-                        <h1>Test</h1>
-                        <p class="countdown">
-                            <span id="days">10 <small>days</small></span>
-                            <span id="hours">11 <small>hours</small></span>
-                            <span id="minutes">35 <small>minutes</small></span>
-                            <span id="seconds">00 <small>seconds</small></span>
-                        </p>
-                        <p class="countdown-over"></p>
-                    </div>
-                </div>
-            </div> -->
+            <ggl-countdown-timer></ggl-countdown-timer>
             <ggl-getting-started></ggl-getting-started>
             <ggl-footer></ggl-footer>
         </div>
