--- a/src/GGL.Web.App/src/app/client/banner/banner.component.html
+++ b/src/GGL.Web.App/src/app/client/banner/banner.component.html
@@ -1,4 +1,9 @@
 <div class="ggl-banner">
+    <!-- check the Comments for more info -->
+    <div class="back-row-toggle splat-toggle">
+        <div class="rain front-row"></div>
+        <div class="rain back-row"></div>
+    </div>
     <div class="ggl-overlay"></div>
     <div class="ggl-cover text-center" style="background-image: url(../../../assets/images/cover_bg_1.jpg);">
         <div class="center-logo">
