--- a/src/GGL.Web.App/src/app/client/countdown-timer/countdown-timer.component.html
+++ b/src/GGL.Web.App/src/app/client/countdown-timer/countdown-timer.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-8 col-md-offset-2 text-center animate-box">
             <p class="countdown">
-                <span id="days">{{nextEventDays}} 10 <small>days</small></span>
+                <span id="days">{{nextEventDays}} <small>days</small></span>
                 <span id="hours">{{nextEventHours}} <small>hours</small></span>
                 <span id="minutes">{{nextEventMinutes}} <small>minutes</small></span>
                 <span id="seconds">{{nextEventSeconds}} <small>seconds</small></span>
