--- a/src/GGL.Web.App/src/styles.scss
+++ b/src/GGL.Web.App/src/styles.scss
@@ -36,3 +36,7 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; font-size: 10pt; }
+.right { text-align: right; }
+.left { text-align: left; }
+.center { text-align: center; }
+
