--- a/src/GGL.Web.App/src/app/client/header/header.component.html
+++ b/src/GGL.Web.App/src/app/client/header/header.component.html
@@ -29,7 +29,7 @@
                         </ul> -->
                     </li>
                     <li>
-                        <a href="booking">Book Now</a>
+                        <a href="booknow">Book Now</a>
                         <!-- <ul class="ggl-sub-menu">
                             <li>
                                 <a href="booking.html#calender">Booking Calender</a>
