--- a/src/GGL.Web.App/src/assets/css/color.scss
+++ b/src/GGL.Web.App/src/assets/css/color.scss
@@ -8,10 +8,10 @@ $color-menu-black: #212121;
 $color-menu-active: #81d8d0;
 $color-white: #FFFFFF;
 $color-white-smoke: #F5F5F5;
-$color-light-green: #57cf57;
+$color-light-green: #4bd444;
 $color-gray: #808080;
 $color-light-gray: #d8cbcb;
 $color-yellow: #FFFF00;
 $color-orange: #ffa500;
 $color-black: #000000;
-$color-lighter-gray: #fefdfd;
+$color-lighter-gray: #f3ebeb;
