Enhanced the book now page with mobile view.

--- a/src/GGL.Web.App/src/assets/css/color.scss
+++ b/src/GGL.Web.App/src/assets/css/color.scss
@@ -1,6 +1,7 @@
 $color-red: #FF0000;
 $color-maroon-red: #C72A2A;
 $color-green: #00FF00;
+$color-dark-green: #006400;
 $color-blue: #0000FF;
 $color-black: #000000;
 $color-skyblue: #87CEEB;
